[package]
name = "richter"
version = "0.2.0"
authors = ["Eira Fransham <eira.fransham@gmail.com>", "Cormac O'Brien <cormac@c-obrien.org>"]
edition = "2021"
resolver = "2"

[dependencies]
arrayvec = "0.7"
beef = "0.5"
bevy = { version = "0.13", features = ["vorbis", "wav", "flac"] }
bevy_mod_auto_exposure = { git = "https://github.com/Kurble/bevy_mod_auto_exposure.git" }
bevy_mod_debugdump = "0.10"
bitflags = "2.4"
bumpalo = "3.4"
byteorder = "1.3"
bytemuck = "1.14"
cgmath = "0.18.0"
chrono = "0.4.0"
failure = "0.1.8"
futures = "0.3.5"
fxhash = "0.2"
im = "15.1.0"
imstr = "0.2"
lazy_static = "1.0.0"
memmap2 = "0.9"
ndarray = "0.15"
nom = "7.1"
num = "0.4"
num-traits = "0.2"
num-derive = "0.4"
parking_lot = "0.12"
png = "0.17"
rand = { version = "0.8", features = ["small_rng"] }
redox_liner = { version = "0.7.1", git = "https://github.com/eira-fransham/liner.git" }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde-lexpr = { git = "https://github.com/eira-fransham/lexpr-rs.git" }
serde_json = "1.0"
shaderc = "0.8"
slab = "0.4"
smol_str = "0.2"
structopt = "0.3.12"
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0"
uluru = "3"
wgpu = { version = "0.19", features = ["spirv", "vulkan-portability"] }
winit = "0.29"

video-rs = { version = "0.6", features = ["ndarray"], optional = true }

[features]
default = ["screenrecord"]
screenrecord = ["video-rs"]
fast-compile = ["bevy/dynamic_linking"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
